# markov-quote

./: .env  Cargo.toml  README.md
src/: errors.rs  main.rs  models.rs  schema.rs
static/: min-navbar.css
templates/: base.html.tera  index.html.tera
